Add VirtualHost for roadmaps

--- a/docker/conf/ssl.conf
+++ b/docker/conf/ssl.conf
@@ -357,6 +357,37 @@ SetEnvIf X-Forwarded-Proto "^https$" HTTPS=on
   Header always set X-Frame-Options "DENY"
 </VirtualHost>
 
+# roadmaps.thunderbird.net
+<VirtualHost *:80>
+  ServerName https://roadmaps.thunderbird.net
+  ServerAlias roadmaps-stage.thunderbird.net
+  DocumentRoot /var/www/html/start/roadmaps.thunderbird.net
+
+  <Directory "/var/www/html/start/roadmaps.thunderbird.net">
+    AllowOverride All
+    Options -Indexes +FollowSymLinks
+    Require all granted
+  </Directory>
+
+  WSGIDaemonProcess roadmaps.thunderbird.net processes=2 threads=10 display-name=%{GROUP} python-home=/var/www/tbservices python-path=/var/www/html/start
+  WSGIProcessGroup roadmaps.thunderbird.net
+  ExpiresActive On
+  ExpiresDefault "access plus 8 hours"
+  RewriteEngine On
+  # https://github.com/thunderbird/thunderbird-website/issues/162
+  RewriteRule ^/ja-JP-mac/?(.*)$ /ja/$1 [R=302]
+  # https://github.com/thunderbird/thunderbird.net-l10n/issues/1
+  RewriteRule ^/bn-(?:BD|IN)/?(.*)$ /bn/$1 [R=302]
+  Header always set Strict-Transport-Security "max-age=31536000"
+  WSGIScriptAliasMatch ^/$ /var/www/html/start/wsgi.py
+  WSGIScriptAliasMatch ^/desktop /var/www/html/start/wsgi.py
+  WSGIScriptAliasMatch ^/android /var/www/html/start/wsgi.py
+  WSGIScriptAliasMatch ^/ios /var/www/html/start/wsgi.py
+  WSGIScriptAliasMatch ^/services /var/www/html/start/wsgi.py
+  # Bug 1862171
+  Header always set X-Frame-Options "DENY"
+</VirtualHost>
+
 # mail.thunderbird.net - redirect to fastmail
 <VirtualHost *:80>
   ServerName https://mail.thunderbird.net
